# gen-totp-pic

./: .gitignore  Cargo.toml  README.md
src/: main.rs
